convert call function to call views
