# docs/swagger.yaml
@@ -2,100 +2,120 @@ basePath: /
 definitions:
   models.AtmLocRequest:
     properties:
-      search_atmloc:
+      c.atm_address:
+        type: string
+      c.atm_city:
+        type: string
+      c.atm_description:
+        type: string
+      i.inst_desc:
         type: string
     type: object
   models.AtmLocResponse:
     properties:
-      City_Province:
+      c.atm_address:
         type: string
-      Description:
+      c.atm_city:
         type: string
-      Insti_Description:
+      c.atm_description:
         type: string
-      Street_Brgy:
+      i.inst_desc:
         type: string
     type: object
   models.BankListRequest:
     properties:
-      search_banklist:
+      bank_code:
+        type: string
+      bank_name:
+        type: string
+      short_name:
         type: string
     type: object
   models.BankListResponse:
     properties:
-      Bank_Bic:
+      bank_bic:
         type: string
-      Bank_Code:
+      bank_code:
         type: string
-      Bank_Name:
+      bank_name:
         type: string
-      Short_Name:
+      short_name:
         type: string
     type: object
   models.BankNewsRequest:
     properties:
-      search_banknews:
+      c.product_name:
         type: string
     type: object
   models.BankNewsResponse:
     properties:
-      Date_:
+      c.product_date:
         type: string
-      Sender:
+      c.product_name:
         type: string
-      Topic:
+      t.given_name:
         type: string
     type: object
   models.BillerProductRequest:
     properties:
-      search_billerproduct:
+      a.provider_name:
+        type: string
+      b.product_category_name:
+        type: string
+      c.biller_product_id:
+        type: string
+      c.biller_product_name:
         type: string
     type: object
   models.BillerProductResponse:
     properties:
-      Bank_Commission:
+      a.provider_name:
+        type: string
+      b.product_category_name:
+        type: string
+      c.bank_commission:
         type: number
-      Biller_Product_Id:
+      c.biller_product_id:
         type: integer
-      Biller_Product_Name:
+      c.biller_product_name:
         type: string
-      Description:
+      c.description:
         type: string
-      Product_Category_Name:
-        type: string
-      Provider_Name:
-        type: string
-      Service_Fee:
+      c.service_fee:
         type: number
-      Status:
+      c.status:
         type: integer
     type: object
   models.BranchRequest:
     properties:
-      search_branch:
+      branch_code:
+        type: string
+      branch_desc:
         type: string
     type: object
   models.BranchResponse:
     properties:
-      Code:
+      branch_code:
         type: string
-      Created_Date:
+      branch_desc:
         type: string
-      Description:
+      created_date:
         type: string
     type: object
   models.CenterRequest:
     properties:
-      search_center:
+      center_code:
+        type: string
+      center_desc:
         type: string
     type: object
   models.CenterResponse:
     properties:
-      Code:
+      center_code:
         type: string
-      Created_Date:
+      center_desc:
         type: string
-      Description:
+      created_date:
         type: string
     type: object
   models.ClientProfileRequest:
@@ -146,96 +166,117 @@ definitions:
     type: object
   models.CommissionRequest:
     properties:
-      search_commission:
+      commission_type:
+        type: string
+      trans_type:
         type: string
     type: object
   models.CommissionResponse:
     properties:
-      Agent_Income:
+      agent_income:
         type: number
-      Bank_Income:
+      bank_income:
         type: number
-      Bank_Partner_Income:
+      bank_partner_income:
         type: number
-      Commission_Type:
+      commission_type:
         type: string
-      Customer_Income:
+      customer_income:
         type: number
-      Transaction_Type:
+      trans_type:
         type: string
     type: object
   models.ConcernTypeRequest:
     properties:
-      search_concerntype:
+      concern_level:
+        type: string
+      concern_name:
         type: string
     type: object
   models.ConcernTypeResponse:
     properties:
-      Comflexity_Level:
+      concern_level:
         type: string
-      Concern:
+      concern_name:
         type: string
-      Turn_Around_Time:
+      concern_time:
         type: string
     type: object
   models.CsrHotlineRequest:
     properties:
-      search_csrhotline:
+      c.contact_number:
+        type: string
+      c.network_provider:
         type: string
     type: object
   models.CsrHotlineResponse:
     properties:
-      Contact_Number:
+      a.inst_desc:
         type: string
-      Institution_Desc:
+      c.contact_number:
         type: string
-      Network_Provider:
+      c.network_provider:
         type: string
     type: object
   models.FailedEnrollmentRequest:
     properties:
-      search_failedenrollment:
+      account_number:
+        type: string
+      client_type:
+        example: Client Type
+        type: string
+      created_date:
+        example: Activated Date Start
+        type: string
+      date_of_birth:
+        type: string
+      error_message:
+        type: string
+      last_updated_date:
+        example: Activated Date End
+        type: string
+      mobile_number:
         type: string
     type: object
   models.FailedEnrollmentResponse:
     properties:
-      Account_Number:
+      account_number:
         type: string
-      Birth_Date:
+      client_type:
         type: string
-      Client_Type:
+      created_date:
         type: string
-      Date_Time:
+      date_of_birth:
         type: string
-      Device_Id:
+      device_id:
         type: string
-      Device_Model:
+      device_model:
         type: string
-      Error_Message:
+      error_message:
         type: string
-      Mobile_Number:
+      mobile_number:
         type: string
     type: object
   models.FeeStructureRequest:
     properties:
-      search_feestructure:
+      trans_type:
         type: string
     type: object
   models.FeeStructureResponse:
     properties:
-      Agent_Income:
-        type: string
-      Agent_Target_Income:
-        type: string
-      Ap_Bancnet_Income:
-        type: string
-      Bank_Income:
-        type: string
       Range:
         type: string
-      Total_Charge:
+      agent_income:
         type: string
-      Transaction:
+      agent_target_income:
+        type: string
+      bancnet_income:
+        type: string
+      bank_income:
+        type: string
+      total_charge:
+        type: string
+      trans_type:
         type: string
     type: object
   models.HierarchyRequest:
@@ -259,6 +300,8 @@ definitions:
         type: string
       center_desc:
         type: string
+      i.inst_desc:
+        type: string
       unit_code:
         type: string
       unit_desc:
@@ -266,169 +309,212 @@ definitions:
     type: object
   models.InstitutionRequest:
     properties:
-      search_institution:
+      inst_code:
+        type: string
+      inst_desc:
         type: string
     type: object
   models.InstitutionResponse:
     properties:
-      Code:
+      created_date:
         type: string
-      Created_Date:
+      inst_code:
         type: string
-      Description:
+      inst_desc:
         type: string
     type: object
   models.ListofAgentRequest:
     properties:
-      search_listofagent:
+      a.inst_desc:
+        type: string
+      c.branch_desc:
+        type: string
+      c.center_desc:
+        type: string
+      c.cid:
+        type: string
+      c.date_and_time:
+        example: Activated Date Start
+        type: string
+      c.mobile_no:
+        type: string
+      c.unit_desc:
+        type: string
+      q.date_and_time:
+        example: Activated Date End
         type: string
     type: object
   models.ListofAgentResponse:
     properties:
-      Branch:
+      a.inst_desc:
         type: string
-      Center:
+      c.branch_desc:
         type: string
-      Cid:
+      c.center_desc:
         type: string
-      Date_Time_Enabled:
+      c.cid:
         type: string
-      Enabled_By:
+      c.date_and_time:
         type: string
-      Full_Name:
+      c.fullname:
         type: string
-      Institution:
+      c.mobile_no:
         type: string
-      Mobile_Number:
+      c.unit_desc:
         type: string
-      Unit:
+      i.user_name:
         type: string
     type: object
   models.LoadProductRequest:
     properties:
-      search_loadproduct:
+      a.product_category_name:
+        type: string
+      c.load_product_id:
+        type: string
+      c.load_product_name:
         type: string
     type: object
   models.LoadProductResponse:
     properties:
-      Description:
+      a.product_category_name:
         type: string
-      Load_Product_Id:
-        type: integer
-      Load_Product_Name:
+      c.description:
         type: string
-      Product_Category_Name:
+      c.load_product_id:
         type: string
-      Status:
-        type: integer
+      c.load_product_name:
+        type: string
+      c.status:
+        type: string
     type: object
   models.ParamConfigRequest:
     properties:
-      search_paramconfig:
+      app_type:
+        example: Param Type
+        type: string
+      param_name:
         type: string
     type: object
   models.ParamConfigResponse:
     properties:
-      Description:
+      app_type:
         type: string
-      Parameter_Name:
+      param_desc:
         type: string
-      Parameter_Type:
+      param_name:
         type: string
-      Parameter_Value:
+      param_value:
         type: string
     type: object
   models.PartnerListRequest:
     properties:
-      search_partnerlist:
+      partner_desc:
+        type: string
+      partner_id:
+        type: string
+      partner_name:
+        type: string
+      status:
         type: string
     type: object
   models.PartnerListResponse:
     properties:
-      Description:
+      merchant_id_prefix:
         type: string
-      Merchant_Id_Prefix:
+      merchant_payment_callback_url:
         type: string
-      Merchant_Payment_Callback_Url:
+      mri_group:
         type: string
-      Mri_Group:
-        type: integer
-      Partner_Api_Url:
+      partner_api_url:
         type: string
-      Partner_Id:
+      partner_desc:
         type: string
-      Partner_Name:
+      partner_id:
         type: string
-      Status:
-        type: integer
+      partner_name:
+        type: string
+      status:
+        type: string
     type: object
   models.ProductCategoryRequest:
     properties:
-      search_productcategory:
+      a.provider_name:
+        type: string
+      b.product_type_name:
+        type: string
+      c.product_category_id:
+        type: string
+      c.product_category_name:
         type: string
     type: object
   models.ProductCategoryResponse:
     properties:
-      Product_Category_Id:
-        type: integer
-      Product_Category_Name:
+      a.provider_name:
         type: string
-      Product_Type_Name:
+      b.product_type_name:
         type: string
-      Provider_Name:
+      c.product_category_id:
         type: string
-      Status:
-        type: integer
+      c.product_category_name:
+        type: string
+      c.status:
+        type: string
     type: object
   models.ProductServicesRequest:
     properties:
-      search_productservices:
+      service_name:
         type: string
     type: object
   models.ProductServicesResponse:
     properties:
-      Description:
+      service_description:
         type: string
-      Name:
+      service_name:
         type: string
-      Show:
+      show:
         type: boolean
     type: object
   models.ProductTypeRequest:
     properties:
-      search_product:
+      a.provider_name:
+        type: string
+      c.product_type_id:
+        type: string
+      c.product_type_name:
         type: string
     type: object
   models.ProductTypeResponse:
     properties:
-      Description:
+      a.provider_name:
         type: string
-      Product_Type_Id:
-        type: integer
-      Product_Type_Name:
+      c.description:
         type: string
-      Provider_Name:
+      c.product_type_id:
         type: string
-      Status:
-        type: integer
+      c.product_type_name:
+        type: string
+      c.status:
+        type: string
     type: object
   models.ProviderRequest:
     properties:
-      search_provider:
+      id:
+        type: string
+      provider_name:
         type: string
     type: object
   models.ProviderResponse:
     properties:
-      Description:
+      description:
         type: string
-      Provider_Alias:
+      id:
         type: string
-      Provider_Id:
-        type: integer
-      Provider_Name:
+      provider_alias:
         type: string
-      Status:
-        type: integer
+      provider_name:
+        type: string
+      status:
+        type: string
     type: object
   models.RemittanceLogRequest:
     properties:
@@ -510,8 +596,6 @@ definitions:
     type: object
   models.RolesManagementRequest:
     properties:
-      role_desc:
-        type: string
       role_name:
         type: string
     type: object
@@ -524,18 +608,22 @@ definitions:
     type: object
   models.ServiceDowntimeRequest:
     properties:
-      search_servicedowntime:
+      downtime_desc:
+        type: string
+      downtime_end:
+        type: string
+      downtime_start:
         type: string
     type: object
   models.ServiceDowntimeResponse:
     properties:
-      Client_Type:
+      client_type:
         type: string
-      Description:
+      downtime_desc:
         type: string
-      End_Date:
+      downtime_end:
         type: string
-      Start_Date:
+      downtime_start:
         type: string
     type: object
   models.SmsLogRequest:
@@ -580,130 +668,171 @@ definitions:
     type: object
   models.SplashScreenRequest:
     properties:
-      search_splashscreen:
+      action:
+        type: string
+      title:
         type: string
     type: object
   models.SplashScreenResponse:
     properties:
-      Action:
+      action:
         type: string
-      Image_Url:
+      image_url:
         type: string
-      Message:
+      message:
         type: string
-      Show:
+      show:
         type: string
-      Sub_Message:
+      sub_message:
         type: string
-      Title:
+      title:
         type: string
     type: object
   models.TransLogRequest:
     properties:
-      search_translog:
+      core_refno:
+        example: Core_ID
+        type: string
+      mobile_refno:
+        example: Mobile_ID
+        type: string
+      post_date:
+        type: string
+      source_account:
+        type: string
+      source_cid:
+        type: string
+      status:
+        type: string
+      target_account:
+        type: string
+      target_cid:
+        type: string
+      trans_date:
+        example: Date_Time
+        type: string
+      trans_type_code:
+        example: Transaction_Type
         type: string
     type: object
   models.TransLogResponse:
     properties:
-      Agent_Income:
+      agent_feature:
         type: string
-      Ap_Bancnet_Instapay:
+      agent_income:
         type: string
-      Ar_Or_Number:
+      amount:
         type: string
-      Bank_Income:
+      ar_or_number:
         type: string
-      Bank_Name:
+      bancnet_income:
         type: string
-      Charges_Coreref_Id:
+      bank_income:
         type: string
-      Core_Id:
+      bank_name:
         type: string
-      Date_Time:
+      core_refno:
         type: string
-      Mes_sage:
+      cust_cid:
         type: string
-      Mobile_Id:
+      message:
         type: string
-      Post_Date_Time:
+      mobile_refno:
         type: string
-      Source_Account:
+      post_date:
         type: string
-      Source_Account_Type:
+      source_account:
         type: string
-      Source_Branch:
+      source_account_type:
         type: string
-      Source_Cid:
+      source_branch:
         type: string
-      Source_Id_Client_Type:
+      source_cid:
         type: string
-      Source_Name:
+      source_client_type:
         type: string
-      Status:
+      source_name:
         type: string
-      Target_Account:
+      status:
         type: string
-      Target_Account_Type:
+      target_account:
         type: string
-      Target_Branch:
+      target_account_type:
         type: string
-      Target_Cid:
+      target_branch:
         type: string
-      Target_Id_Client_Type:
+      target_cid:
         type: string
-      Target_Name:
+      target_client_type:
         type: string
-      Transaction_Amount:
+      target_name:
         type: string
-      Transaction_Charge:
+      trans_amount_fee:
         type: string
-      Transaction_Type:
+      trans_date:
         type: string
-      With_Agent_Feature:
-        type: integer
+      trans_type_code:
+        type: string
     type: object
   models.UnitRequest:
     properties:
-      search_unit:
+      unit_code:
+        type: string
+      unit_desc:
         type: string
     type: object
   models.UnitResponse:
     properties:
-      Code:
+      created_date:
         type: string
-      Created_Date:
+      unit_code:
         type: string
-      Description:
+      unit_desc:
         type: string
     type: object
   models.UsedDeviceRequest:
     properties:
-      search_useddevice:
+      cid:
+        type: string
+      client_type:
+        example: Client Type
+        type: string
+      created_date:
+        example: Activated Date Start
+        type: string
+      device_id:
+        type: string
+      device_status:
+        example: Status
+        type: string
+      last_updated_date:
+        example: Activated Date End
+        type: string
+      mobile_number:
         type: string
     type: object
   models.UsedDeviceResponse:
     properties:
-      Android_Version:
+      android_version:
         type: string
-      Branch:
+      branch_code:
         type: string
-      Cid:
+      cid:
         type: string
-      Costumer_Name:
+      client_name:
         type: string
-      Costumer_Type:
+      client_type:
         type: string
-      DateTime_Activated:
-        example: "2022-02-08T19:33:06Z"
+      created_date:
         type: string
-      Device_Id:
+      device_id:
         type: string
-      Device_Model:
+      device_model:
         type: string
-      Mobile_Number:
+      device_status:
         type: string
-      Status:
-        type: integer
+      mobile_number:
+        type: string
     type: object
   models.UserManagementRequest:
     properties:
@@ -717,7 +846,7 @@ definitions:
         type: string
       middle_name:
         type: string
-      user_name:
+      user_login:
         type: string
     type: object
   models.UserManagementResponse:
@@ -734,7 +863,7 @@ definitions:
         type: string
       roles:
         type: string
-      user_name:
+      user_login:
         type: string
     type: object
 host: 192.168.0.148:1111
